Modified the card and title component and updated all the utility functions

--- a/src/components/titles/Title.module.css
+++ b/src/components/titles/Title.module.css
@@ -6,7 +6,7 @@
   padding: 30px 20px;
 }
 
-.box > div {
+.title {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
@@ -35,4 +35,5 @@
   margin: 0 4px;
   color: var(--dark-grey);
   cursor: pointer;
+  top: -5px;
 }
