--- a/src/components/content/MainContent.module.css
+++ b/src/components/content/MainContent.module.css
@@ -17,3 +17,9 @@
     grid-template-columns: repeat(3, auto);
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .main_content {
+    grid-template-columns: repeat(1, auto);
+  }
+}
